<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".presentation.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_register_logo"
        android:layout_width="223dp"
        android:layout_height="90dp"
        android:elevation="4dp"
        android:background="@drawable/auth_page_logo_border"
        app:layout_constraintTop_toTopOf="@id/constraintlayout_register_form_area"
        app:layout_constraintBottom_toTopOf="@id/constraintlayout_register_form_area"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_luma_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_register_form_area"
        android:background="@drawable/auth_page_form_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtview_register_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textAppearance="@style/LumaAI.TextAppearance.Heading1"
            android:paddingTop="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/txtview_register_email"
            />
        <TextView
            android:id="@+id/txtview_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge"
            android:text="@string/auth_email_label"
            android:paddingTop="28dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_register_welcome"
            />
        <EditText
            android:id="@+id/edttxt_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyMedium"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_register_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/txtview_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge"
            android:text="@string/auth_password_label"
            android:paddingTop="28dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/edttxt_register_email"
            />
        <EditText
            android:id="@+id/edttxt_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyMedium"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/ic_eye"
            app:layout_constraintTop_toBottomOf="@id/txtview_register_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/txtview_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge"
            android:text="@string/register_confirm_password_label"
            android:paddingTop="28dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/edttxt_register_password"
            />
        <EditText
            android:id="@+id/edttxt_register_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyMedium"
            android:layout_marginHorizontal="20dp"
            android:drawableEnd="@drawable/ic_eye"
            app:layout_constraintTop_toBottomOf="@id/txtview_register_confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/txtview_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge"
            android:text="@string/register_name_label"
            android:paddingTop="28dp"
            android:paddingHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/edttxt_register_confirm_password"
            />
        <EditText
            android:id="@+id/edttxt_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_name_hint"
            android:inputType="text"
            android:textAppearance="@style/LumaAI.TextAppearance.BodyMedium"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/txtview_register_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/compatbtn_register_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_btn"
            android:background="@drawable/landing_btn"
            android:textColor="@color/white"
            android:textAppearance="@style/LumaAI.TextAppearance.Heading3"
            android:layout_marginTop="28dp"
            android:layout_marginHorizontal="80dp"
            app:layout_constraintTop_toBottomOf="@id/edttxt_register_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/txtview_register_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_have_account_btn"
            android:fontFamily="@font/inter_semibold"
            android:textColor="@color/danger"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/compatbtn_register_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>