<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        android:background="@drawable/dialog_bg"
        >
        <TextView
            android:id="@+id/txtview_dialog_change_language_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_language"
            android:textAppearance="@style/LumaAI.TextAppearance.Heading3"
            android:paddingVertical="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <RadioGroup
            android:id="@+id/radiogroup_dialog_change_language_options"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/txtview_dialog_change_language_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <RadioButton
                android:id="@+id/radiobtn_dialog_change_language_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_change_language_en"
                app:buttonTint="@color/primary"
                android:background="@drawable/edit_text_bg"
                android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge" />

            <RadioButton
                android:id="@+id/radiobtn_dialog_change_language_th"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_change_language_th"
                android:background="@drawable/edit_text_bg"
                app:buttonTint="@color/primary"
                android:layout_marginVertical="12dp"
                android:textAppearance="@style/LumaAI.TextAppearance.BodyLarge"
                />
            </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>